Fix for overflow of screen block on home on 1440-1800px screens

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -20,6 +20,7 @@ $bp-medium: 768px;
 $bp-large: 1024px;
 $bp-larger: 1240px;
 $bp-huge: 1440px;
+$bp-gargantuan: 1800px;
 
 /* ------------------------------------------------------------ *\
 |* Misc
